docker y Kubernetes/kubernetes/lab12/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: practica12
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 3000
  selector:
    app: practica12
